--- a/src/locales/es/es.json
+++ b/src/locales/es/es.json
@@ -1,5 +1,10 @@
 {
   "translation": {
+    "alert": {
+      "headerError": "error",
+      "subHeaderError": "algo inesperado ocurrio",
+      "buttonError": "cerrar"
+    },
     "menu": {
       "adoption": "Adopción",
       "login": "login",
@@ -8,124 +13,126 @@
     "petList": {
       "title": "adopción"
     },
-    "createPetStep1": {
-      "title": "Tomale una foto",
-      "emptyState": "Comienza agregando alguna foto de tu mascota...",
+    "formButtons": {
       "cancelBtn": "cancelar",
       "backBtn": "volver",
       "nextBtn": "siguiente",
-      "noPhotoHeader": "Agrega una foto",
-      "noPhotoSubHeader": "Es necesaria para identificarlo",
-      "noPhotoMessage": "No podemos continuar sin al menos una foto. Esta servirá para identificarlo.",
-      "noPhotoBtn": "cerrar"
+      "submitBtn": "finalizar"
+    },
+    "createPetStep1": {
+      "title": "Tomale una foto",
+      "emptyState": "Comienza agregando alguna foto de tu mascota...",
+      "images": {
+        "label": "Añade alguna foto...",
+        "errors": {
+          "required": "debes elegir almenos una foto"
+        }
+      }
     },
     "createPetStep2": {
-      "title": "Describelo",
+      "title": "¿Como es?",
       "backBtn": "volver",
-      "nextBtn": "siguiente"
-    },
-    "petForm": {
-      "title": "Formulario de alta",
-      "cancel": "Cancelar",
-      "submitBtn": "Registrar",
-      "pageTitle": "Agrega tu mascota",
-      "form": {
-        "images": {
-          "label": "Añade alguna foto..."
-        },
-        "name": {
-          "label": "nombre",
-          "placeholder": "dale un nombre",
-          "errors": {
-            "required": "debes darle un nombre",
-            "minLength": "el nombre no puede tener menos de {{minLength}}",
-            "maxLength": "el nombre no puede tener más de {{maxLength}}"
-          }
-        },
-        "age": {
-          "label": "edad",
-          "placeholder": "selecciona una opción",
-          "options": {
-            "puppy": "cachorro",
-            "adult": "adulto",
-            "elder": "mayor"
-          },
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "type": {
-          "label": "tipo",
-          "placeholder": "selecciona algun tipo",
-          "options": {
-            "dog": "perro",
-            "cat": "gato",
-            "other": "otro"
-          },
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "size": {
-          "label": "tamaño",
-          "placeholder": "selecciona uno de los tamaños",
-          "options": {
-            "small": "chico",
-            "medium": "mediano",
-            "big": "grande"
-          },
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "health": {
-          "label": "salud",
-          "placeholder": "selecciona un estado de salud",
-          "options": {
-            "healthy": "saludable",
-            "unhealthy": "enfermo",
-            "underTreatment": "bajo tratamiento"
-          },
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "description": {
-          "label": "notas",
-          "placeholder": "algo más que desees agregar?",
-          "errors": {
-            "maxLength": "el nombre no puede tener más de {{maxLength}}"
-          }
-        },
-        "country": {
-          "label": "país",
-          "placeholder": "en que pais está?",
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "state": {
-          "label": "provincia",
-          "placeholder": "en que provincia está?",
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "city": {
-          "label": "ciudad",
-          "placeholder": "en que ciudad está?",
-          "errors": {
-            "required": "debes elegir una opción"
-          }
-        },
-        "neighborhood": {
-          "label": "barrio",
-          "placeholder": "en que barrio está? (opcional)",
-          "errors": {
-            "minLength": "el nombre no puede tener menos de {{minLength}}",
-            "maxLength": "el nombre no puede tener más de {{maxLength}}"
-          }
+      "nextBtn": "siguiente",
+      "name": {
+        "label": "nombre",
+        "placeholder": "dale un nombre",
+        "errors": {
+          "required": "debes darle un nombre",
+          "minLength": "el nombre no puede tener menos de {{minLength}}",
+          "maxLength": "el nombre no puede tener más de {{maxLength}}"
         }
+      },
+      "age": {
+        "label": "edad",
+        "placeholder": "selecciona una opción",
+        "options": {
+          "puppy": "cachorro",
+          "adult": "adulto",
+          "elder": "mayor"
+        },
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "type": {
+        "label": "tipo",
+        "placeholder": "selecciona algun tipo",
+        "options": {
+          "dog": "perro",
+          "cat": "gato",
+          "other": "otro"
+        },
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "size": {
+        "label": "tamaño",
+        "placeholder": "selecciona uno de los tamaños",
+        "options": {
+          "small": "chico",
+          "medium": "mediano",
+          "big": "grande"
+        },
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "health": {
+        "label": "salud",
+        "placeholder": "selecciona un estado de salud",
+        "options": {
+          "healthy": "saludable",
+          "unhealthy": "enfermo",
+          "underTreatment": "bajo tratamiento"
+        },
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      }
+    },
+    "createPetStep3": {
+      "title": "¿Donde está?",
+      "backBtn": "volver",
+      "nextBtn": "siguiente",
+      "country": {
+        "label": "país",
+        "placeholder": "en que pais está?",
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "state": {
+        "label": "provincia",
+        "placeholder": "en que provincia está?",
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "city": {
+        "label": "ciudad",
+        "placeholder": "en que ciudad está?",
+        "errors": {
+          "required": "debes elegir una opción"
+        }
+      },
+      "neighborhood": {
+        "label": "barrio",
+        "placeholder": "en que barrio está? (opcional)",
+        "errors": {
+          "minLength": "el nombre no puede tener menos de {{minLength}}",
+          "maxLength": "el nombre no puede tener más de {{maxLength}}"
+        }
+      },
+      "description": {
+        "label": "notas",
+        "placeholder": "algo más que desees agregar?",
+        "errors": {
+          "maxLength": "el nombre no puede tener más de {{maxLength}}"
+        }
+      },
+      "available": {
+        "label": "Disponible en la lista de adopción"
       }
     }
   }
