feat: add general error handling

--- a/src/locales/es/es.json
+++ b/src/locales/es/es.json
@@ -3,7 +3,8 @@
     "alert": {
       "headerError": "error",
       "subHeaderError": "algo inesperado ocurrio",
-      "buttonError": "cerrar"
+      "buttonError": "cerrar",
+      "buttonRetry": "reintentar"
     },
     "menu": {
       "adoption": "Adopción",
